# sep4-iot

./: README.md
.devcontainer/: devcontainer.json
.github/workflows/: prevent_direct_push.yml  pull_to_main.yml
pipeline/: config_build_run_test.sh  update_project_pages.sh
proj_pages/: index.html  index.html.template
test/: CMakeLists.txt
test/src/: CMakeLists.txt  dataHandler_test.cpp  medianCalculator_test.cpp  mockTemperatureSensor_test.cpp  test_activationHandler.cpp  test_sensorsHandler.cpp  test_servo.cpp  test_temperatureHumidity.cpp
test/src/TestActivationHandler/: CMakeLists.txt  test_activationHandler.cpp
test/src/TestDataHandler/: CMakeLists.txt  dataHandler_test.cpp
test/src/TestMedianCalculator/: CMakeLists.txt
test/src/TestSensorsHandler/: CMakeLists.txt  test_sensorsHandler.cpp
test/src/TestServo/: CMakeLists.txt
test/src/TestTemperatureHumidity/: CMakeLists.txt  test_temperatureHumidity.cpp
test/src/Tests/: CMakeLists.txt  hello_test.cpp
